# The_Forge

./: .gitignore  .gitmodules  Build.lua  CMakeLists.txt  LICENSE.txt  README.md  ReadForCLion  main.cpp  test.aseprite  vcpkg_setup.bat
.github/workflows/: build.yml
App/: App.aps  Build-App.lua  imgui.ini
App/Source/: Main.cpp
Documentation/: Architecture Overview.md  Forge TODO.md  README.md  Reflection 4-22-25.md
Documentation/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  workspace.json
Documentation/.obsidian/snippets/: code-snippets.css  general.css  presentations.css
Documentation/Engine/: Forge Architecture.md
Documentation/Engine/Components/: Component Functions.md
Documentation/Engine/Components/Systems/: Component Manager.md
Documentation/Engine/Rendering/: Camera Stuff.md  Renderable Interface.md
Documentation/Engine/Rendering/Shaders/: Shader Uniform System.md
Documentation/Netcode/: Partial Byte Stream Packets.md
Documentation/Presentations/: 2-25-23 Presentation.md  2-25-25 Presentation.md
Documentation/Production/: Future Goals.md
Games/: Build-Games.lua  ErrorFile  imgui.ini
Games/Project-Steel/: Build-Steel.lua  imgui.ini
Games/Project-Steel/Art Files/: construction_faculty.aseprite  core.aseprite  large_hallway.aseprite  ship_parts_sheet.aseprite  sidebar.aseprite
Games/Project-Steel/Assets/: Asteroid.prefab  Loading Screen.prefab  Player.prefab
Games/Project-Steel/Assets/Levels/: Hello.json  Yo.json  colin.json  hehe.json  hi.json  stop.json  test.json
Games/Project-Steel/Assets/Prefabs/: Asteroid.prefab  Large Hallway Tile.prefab  Player.prefab  Ship Manager.prefab
Games/Project-Steel/Assets/Shaders/: Destructible.frag
Games/Project-Steel/Config/: defaults.json
Games/Project-Steel/Source/: Astronaut.cpp  Astronaut.h  Astronaut.reflected.cpp  Destructible.cpp  Destructible.h  FluxWrench.cpp  FluxWrench.h  ResourceCounter.cpp  ResourceCounter.h  ResourceManager.cpp  ResourceManager.h  ShipManager.cpp  ShipManager.h  ShipPiece.cpp  ShipPiece.cpp~  ShipPiece.h  SpaceGrid.cpp  SpaceGrid.h  Spawner.cpp  Spawner.h  main.cpp
Launcher/: Build-Launcher.lua  imgui.ini
Launcher/Assets/Shaders/: Line.frag  PixelGrid.vert  Sprite.vert  Text.frag
Launcher/Source/: Launcher.cpp  Launcher.h  LauncherWindow.cpp  LauncherWindow.h  main.cpp
Scripts/: Setup-Solution-Windows.bat  Setup-Windows.bat
Scripts/BuildTools/: reflect_generator.py  reflect_log.txt  run_reflection.bat
Scripts/Utils/: Setup-Premake.ps1
The Forge/Engine/: Build-Engine.lua
The Forge/Engine/Assets/Shaders/: Line.frag  PixelGrid.frag  PixelGrid.vert  ScreenQuad.frag  Sprite.frag  text.frag  text.vert
The Forge/Engine/Source/Editor/: CommandTerminal.cpp  CommandTerminal.h  Console.cpp  Console.h  ContentDrawer.cpp  ContentDrawer.h  Details.cpp  Details.h  DetailsEditor.cpp  DetailsEditor.h  EditorCamera.cpp  EditorCamera.h  EditorManager.cpp  EditorManager.h  EditorShortcuts.cpp  EditorShortcuts.h  ImGuiHelper.cpp  ImGuiHelper.h  LevelEditor.cpp  LevelEditor.h  SceneDisplay.cpp  SceneDisplay.h
The Forge/Engine/Source/Engine/: Chat.cpp  Chat.h  ChatWindow.cpp  ChatWindow.h  CommandRegistry.cpp  CommandRegistry.h  CommandTerminal.cpp  CommandTerminal.h  CommandUtils.cpp  CommandUtils.h  Component.h  ComponentPool.h  ComponentUtils.cpp  ComponentUtils.h  ConsoleStreamBuffer.cpp  ConsoleStreamBuffer.h  Data.h  EngineManager.cpp  EventData.h  (+36 more)
The Forge/Netcode/: Build-Netcode.lua
The Forge/Netcode/Source/: ByteStream.cpp  ByteStream.h  GamerServiceSteam.cpp  GamerServices.h  LinkingContext.cpp  LinkingContext.h  NetworkManager.cpp  NetworkManager.h  PacketUtils.h
TheForge/Netcode/Source/: ByteStream.cpp  GamerServices.h  LinkingContext.h  NetworkManager.cpp  PacketHeader.h
assets/game-data/: level.json  player.json
assets/game-data/prefabs/: asteroid.json  enemy.json  player.json  projectile.json
assets/shaders/: Player.frag  Sprite.frag  Sprite.vert
src/private/: ByteStream.h  Client.h  Collider.h  Component.h  ComponentPool.h  EditorEngine.h  EditorUIWindow.h  EnemyController.h  EnemySpawner.h  Engine.h  EventDispatcher.h  EventListener.h  GameData.h  GameMode.h  GameObject.h  GameObjectManager.h  Health.h  InputManager.h  Launcher.h  LeaderboardsUIWindow.h  NetCode.h  NetcodeUtilites.h  ObjectCreator.h  ObjectStateReader.h  ObjectStateWriter.h  PlayEngine.h  PlayerController.h  PrefabManager.h  Projectile.h  Renderer.h  RespawnManager.h  ScoreManager.h  Server.h  Shader.h  SpriteRenderer.h  System.h  Texture.h  ThreadPool.h  Transform.h  UIManager.h  (+2 more)
src/private/events/: DetailsChangedEvent.h  EnemySpawnedEvent.h  EventDispatcher.h  EventListener.h  EventTypes.h  Events.h  ObjectHitEvent.h  OnDestroyedEvent.h  SpawnPlayerEvent.h  SyncWorldEvent.h  UpdateObjectEvent.h
src/public/: ByteStream.cpp  Client.cpp  Collider.cpp  EditorEngine.cpp  EditorUIWindow.cpp  EnemyController.cpp  EnemySpawner.cpp  Engine.cpp  EventDispatcher.cpp  GameMode.cpp  GameObject.cpp  GameObjectManager.cpp  Health.cpp  InputManager.cpp  Launcher.cpp  LeaderboardsUIWindow.cpp  NetCode.cpp  NetcodeUtilites.cpp  ObjectCreator.cpp  ObjectStateReader.cpp  ObjectStateWriter.cpp  PlayEngine.cpp  PlayerController.cpp  Projectile.cpp  Renderer.cpp  RespawnManager.cpp  ScoreManager.cpp  Server.cpp  Shader.cpp  SpriteRenderer.cpp  System.cpp  Texture.cpp  UIManager.cpp  main.cpp
(+167 files in other folders)
